--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -7,10 +7,6 @@ body {
 }
 
 .register {
-    min-height: 500px;
-    max-height: 600px;
-    min-width: 800px;
-    max-width: 800px;
     margin: 0 auto;
     font-size: 18px;
     padding: 20px 15px;
@@ -26,11 +22,11 @@ body {
     margin: 60px auto;
     margin-bottom: 10px;
     padding: 15px 0 15px 15px;
-    width: 50%;
+    text-align: center;
     border-radius: 3px;
 }
 
 .tabsHeader {
     padding: 0 15px;
     width: 50%;
-}
+}   
