Updating client register form and styles
- New tab was created (Reference)
- All content of the forms were revised and changed
- CSS class styles were created or updated in the styles.css file
  in order to remove inline styles

--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -6,7 +6,7 @@ body {
     font-size: 16px;
 }
 
-.register {
+.registerForm {
     margin: 0 auto;
     font-size: 18px;
     padding: 20px 15px;
@@ -26,6 +26,15 @@ body {
     border-radius: 3px;
 }
 
+.bodyTitle {
+    font-size: 20px;
+    margin: 0px auto;
+    margin-bottom: 10px;
+    padding: 15px 0 15px 15px;
+    text-align: center;
+    border-radius: 3px;
+}
+
 .tabsHeader {
     padding: 0 15px;
     width: 50%;
@@ -33,12 +42,17 @@ body {
 
 .registerListTabs {
     text-align: center;
+    padding: 0px;
 }
 
-#addBankAccountButton {
+.addItemButton {
     margin-left: 15px;
 }
 
-.removeBankAccountButton {
+.removeItemButton {
 	margin-top: 30px;
+}
+
+.sideButton {
+    margin-top: 30px;
 }
