--- a/src/main/webapp/styles/styles.css
+++ b/src/main/webapp/styles/styles.css
@@ -9,12 +9,10 @@ body {
 .registerForm {
     margin: 0 auto;
     font-size: 18px;
-    padding: 20px 15px;
 }
 
-.registerButton {
-    width: 100px;
-    margin: 0 auto 10px;
+.navigationButtons {
+    margin: 15px 0px ;
 }
 
 .title {
